Gestures nav: allow to skip back swipe gesture on top half or top smaller area of the screen [2/2]
Change-Id: I85160cb748d9d7858bca38edddf829d655aa7680
Signed-off-by: Sagar Shah <sagarshah2326@gmail.com>

--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -74,4 +74,12 @@
     <string name="security_settings_fingerprint_sensor_location_left">left side</string>
     <string name="security_settings_fingerprint_sensor_location_right">right side</string>
 
+    <!-- Allow to skip back swipe gesture on top half or top -->
+    <string name="smallest_tick_label">Full screen</string>
+    <string name="greatest_tick_label">Half screen</string>
+    <!-- [CHAR LIMIT=60] -->
+    <string name="back_sensitivity_dialog_title_cust">Back Sensitivity and DeadZone</string>
+    <!-- [CHAR LIMIT=NONE] -->
+    <string name="back_sensitivity_dialog_message_cust">\nUse the first seekbar to configure back swipe sensitivity, the second seekbar to set the area of the screen where the swipe can be triggered, to avoid conflicts with in-app gestures.</string>
+
 </resources>
